--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
