--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4",
-    "morgan": "^1.10.0"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
