--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "yourpasswordhere",
+    "password": "yourPasswordHere",
     "database": "database_development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3306
   },
   "test": {
     "username": "root",
